# genetic-algorithms-experiment

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: deploy.yml
