[project]
name = "ia-inspiracion-biologica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.17.2",
    "matplotlib>=3.10.7",
    "mypy>=1.19.0",
    "numpy>=2.3.4",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "marimo>=0.17.2",
    "mypy>=1.19.0",
]
