[project]
name = "ia-inspiracion-biologica"
version = "0.1.0"
description = "Genetic algoritm experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
]
